--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   },
   "dependencies": {
     "@emailjs/browser": "^3.7.0",
+    "@fortawesome/fontawesome-svg-core": "^6.4.2",
+    "@fortawesome/free-brands-svg-icons": "^6.4.2",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "dotenv": "^16.0.3",
     "expr-eval": "^2.0.2",
     "jquery": "^3.6.0",
@@ -20,6 +23,7 @@
     "react-draggable": "^4.4.4",
     "react-ga": "^3.3.0",
     "react-onclickoutside": "^6.11.2"
+    
   },
   "devDependencies": {
     "autoprefixer": "^10.2.6",
