--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react-dom": "latest",
     "react-draggable": "^4.4.4",
     "react-ga": "^3.3.0",
-    "react-onclickoutside": "^6.11.2"
+    "react-onclickoutside": "^6.11.2",
+    "react-icons": "^4.11.0" , 
     
   },
   "devDependencies": {
