--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "personal-portfolio",
   "version": "2.0.0",
   "private": true,
-  "homepage": "https://github.com/HelmiDev03",
+  "homepage": "https://github.com/lmahdy",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
