--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@fortawesome/fontawesome-svg-core": "^6.4.2",
     "@fortawesome/free-brands-svg-icons": "^6.4.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "axios": "^1.7.7",
     "dotenv": "^16.0.3",
     "expr-eval": "^2.0.2",
     "jquery": "^3.6.0",
@@ -22,8 +23,8 @@
     "react-dom": "latest",
     "react-draggable": "^4.4.4",
     "react-ga": "^3.3.0",
-    "react-onclickoutside": "^6.11.2",
-    "react-icons": "^4.3.1" 
+    "react-icons": "^4.3.1",
+    "react-onclickoutside": "^6.11.2"
   },
   "devDependencies": {
     "autoprefixer": "^10.2.6",
